# Speed-prediction-using-LSTM

./: README.md  multi_driving_cycles_process.py  pyproject.toml
test_dataset/: Merged_real_cycle.mat  NEURAL_NETWORK.cpp  real_speed_vector6.mat
