[project]
name = "microgrid"
version = "0.1.0"
description = "Microgrid RL Dispatch"
authors = [
    {name = "hongda"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "stable-baselines3>=2.3.2,<3.0.0",
    "shimmy<1.0.0",
    "gymnasium[accept-rom-license,atari]==0.29.1",
    "matplotlib<3.10",
    "pandas>=2.0.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "opencv-python>=4.8.0",
    "scikit-learn (<1.6.0)",
    "optuna (>=4.8.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
